--- a/chapter6.tex
+++ b/chapter6.tex
@@ -10,13 +10,13 @@ In this research, we motivate the need for integrating provenance into the IoT a
 Some of the proposed future work for this research is outlined bellow:
 \begin{itemize}
 
-\item Provenance collection raises privacy issues.How do we ensure that the vast amount of data collected is not invasive to the privacy of the use and also is not used as a tool to perform malicious attacks.
+\item Provenance collection raises privacy issues. How do we ensure that the vast amount of data collected is not invasive to the privacy it is not used as a tool to perform malicious attacks.
 
 \item Provenance Query: How do we query provenance data in order to interpret provenance information and make analysis of data collected.
 
-\item Provenance Versioning: Provenance version creates cycles. When a file is read or edited do we create a new instance of the file? Tracking all transformations that occurs on a data object in memeory constrained devices might lead to running out of storage space. A new instance of the provenance of that file should be created and included in the provenance data.
+\item Provenance Versioning: Provenance version creates cycles. When a file is read or edited, is a new instance of the file created? Tracking all transformations that occurs on a data object in memory constrained devices might lead to running out of storage space. 
 
-\item Securing Provenance: Due to the great level of sensitivity that  provenance data entails, it is of utmost importance to ensure the confidentiality and integrity of provenance data stored on IoT devices while at rest or in transit. Proper encryption and authentication techniques \cite{Hasan:2009:CFP:1525908.1525909} need to be employed to ensure the confidentiality, integrity, and availability of provenance data.
+\item Securing Provenance: Due to the great level of sensitivity that  provenance data entails, it is of utmost importance to ensure the confidentiality and integrity of provenance data stored on IoT devices while at rest or in transit. Proper encryption and authentication techniques \cite{Hasan:2009:CFP:1525908.1525909} is need to ensure the confidentiality, integrity, and availability of provenance data.
 
 \end{itemize}
 
