--- a/refrences.bib
+++ b/refrences.bib
@@ -538,3 +538,38 @@ on root volumes, especially during early boot. In this paper we describe an appr
 	abstract =	{This document describes a simple client/server model for supporting policy control over QoS signaling protocols. [STANDARDS-TRACK]},
 }
 
+@inproceedings{Ali:2013:PPL:2569433.2569893,
+ author = {Ali, Mufajjul and Moreau, Luc},
+ title = {A Provenance-Aware Policy Language (cProvl) and a Data Traceability Model (cProv) for the Cloud},
+ booktitle = {Proceedings of the 2013 International Conference on Cloud and Green Computing},
+ series = {CGC '13},
+ year = {2013},
+ isbn = {978-0-7695-5114-2},
+ pages = {479--486},
+ numpages = {8},
+ url = {http://dx.doi.org/10.1109/CGC.2013.81},
+ doi = {10.1109/CGC.2013.81},
+ acmid = {2569893},
+ publisher = {IEEE Computer Society},
+ address = {Washington, DC, USA},
+ keywords = {policy language, provenance, cloud, cProvl, cProv, Prov, data traceability, XACML},
+} 
+
+@inproceedings{Ali:2014:PPC:2977935.2977949,
+ author = {Ali, Mufajjul and Moreau, Luc},
+ title = {A Provenance-Based Policy Control Framework for Cloud Services},
+ booktitle = {Revised Selected Papers of the 5th International Provenance and Annotation Workshop on Provenance and Annotation of Data and Processes - Volume 8628},
+ series = {IPAW 2014},
+ year = {2015},
+ isbn = {978-3-319-16461-8},
+ location = {Cologne, Germany},
+ pages = {127--138},
+ numpages = {12},
+ url = {http://dx.doi.org/10.1007/978-3-319-16462-5_10},
+ doi = {10.1007/978-3-319-16462-5_10},
+ acmid = {2977949},
+ publisher = {Springer-Verlag New York, Inc.},
+ address = {New York, NY, USA},
+ keywords = {Cloud, Prov, Provenance, Share, XACML, cProv, cProvl},
+} 
+
