--- a/thesis.tex
+++ b/thesis.tex
@@ -40,7 +40,7 @@
 % Uncomment to put degrees on title page
 \AuthorDegrees{M.S.}
 \date{FEB 2016}
-\DeptName{Department of Computer Science}
+\DeptName{Department of Electrical and Computer Science}
 
 \CommitteeChair{Gedare Bloom, Ph.D.}
 %\CommitteeChair{Gedare Bloom, Chair, Ph.D.}
